engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__skills_toggle_view__tests__skills_toggle_long_names_at_narrow_width.snap
---
source: tui/src/bottom_pane/skills_toggle_view.rs
assertion_line: 569
expression: "render_lines(&view, 48)"
---
                                                
  Enable/Disable Skills                         
  Turn skills on or off. Your changes are       
  saved automatically.                          
                                                
  Type to search skills                         
                                                
› [x] superpowers-systematic-debugging (polish) 
  [ ] superpowers-verification-before-completio…
                                                
                                                
                                                
  space/enter toggle · esc close
